--- a/01Animations/index.html
+++ b/01Animations/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div id="box1"></div>
-    <div id="box2"></div>
+    <!-- <div id="box1"></div>
+    <div id="box2"></div> -->
+
+    <h1>Hello</h1>
+    <h1>Welcome back!!</h1>
+    <h1>GSAP Animations</h1>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./script.js"></script>
