--- a/01Animations/index.html
+++ b/01Animations/index.html
@@ -10,9 +10,19 @@
     <!-- <div id="box1"></div>
     <div id="box2"></div> -->
 
-    <h1>Hello</h1>
+    <!-- <h1>Hello</h1>
     <h1>Welcome back!!</h1>
-    <h1>GSAP Animations</h1>
+    <h1>GSAP Animations</h1> -->
+
+    <div id="nav">
+        <h2>GSAP Animation</h2>
+        <div id="part2">
+            <h4>Home</h4>
+            <h4>About</h4>
+            <h4>Contact</h4>
+            <h4>More</h4>
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./script.js"></script>
