--- a/02ScrollTrigger/index.html
+++ b/02ScrollTrigger/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <div class="page1">
-        <div class="box"></div>
+        <!-- <div class="box"></div> -->
     </div>
     <div class="page2">
         <!-- <div class="box"></div> -->
-         <h1>Hello, Welcome!!</h1>
-         <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+         <!-- <h1>Hello, Welcome!!</h1> -->
+         <!-- <h1>Lorem ipsum dolor sit amet consectetur.</h1> -->
+         <h1>Experiences</h1>
     </div>
     <div class="page3">
-        <div class="box"></div>
+        <!-- <div class="box"></div> -->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
