--- a/03Timeline/index.html
+++ b/03Timeline/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timeline</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div id="main">
+      <div id="nav">
+        <h2>Timeline</h2>
+        <i class="ri-menu-3-line"></i>
+      </div>
+      <div id="full">
+        <h4>Work</h4>
+        <h4>About</h4>
+        <h4>Courses</h4>
+        <h4>Services</h4>
+        <h4>Contact</h4>
+      </div>
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
