--- a/03Timeline/index.html
+++ b/03Timeline/index.html
@@ -22,8 +22,11 @@
         <h4>Courses</h4>
         <h4>Services</h4>
         <h4>Contact</h4>
+        <i class="ri-close-line"></i>
       </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
   </body>
 </html>
